[package]
name = "cypher-parser"
version = "0.8.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "A lexer, parser, and pluggable executor for a practical subset of the Cypher graph query language."
homepage = "https://github.com/Shopify/cypher-parser"
repository = "https://github.com/Shopify/cypher-parser"
readme = "README.md"
keywords = ["cypher", "parser", "graph", "query", "opencypher"]
categories = ["parser-implementations"]
# Agent/contributor guidance; not part of the published library.
exclude = ["AGENTS.md"]

# Standalone workspace root so the crate is never absorbed by a parent workspace.
[workspace]

[lib]
crate-type = ["rlib"]

[dependencies]
